--- a/src/components/Breadcrumbs/Breadcrumbs.module.scss
+++ b/src/components/Breadcrumbs/Breadcrumbs.module.scss
@@ -1,14 +1,16 @@
 @import '/src/variables.scss';
 
-
 .wrapper {
-	width: 100%;
 	display: flex;
+	justify-content: center;
 	padding: 1em 0;
 	font-size: 1.2rem;
 
 	@media (min-width: $desktop-width-transform) {
-		padding: 1.4em 0;
+		justify-content: flex-start;
+		padding: 1.4em 0;	
+		max-width: $desktop-wrapper-width;
+		margin: auto;
 	}
 
 	.backwards {
