--- a/src/variables.scss
+++ b/src/variables.scss
@@ -8,8 +8,8 @@ $color-grayish: #EDEDED;
 $color-yellowish: #F6C64B;
 
 // Global margins
-$mobile-page-margins: 1.3rem 1.3rem;
-$desktop-page-margins: 2.9rem auto;
+$mobile-page-margins: 1.3rem;
+$desktop-page-margins: 2.9rem;
 
 // Desktop transformation
 $desktop-width-transform: 1200px;
